--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   riverpod: ^3.1.0
   http: ^1.6.0
   flutter_dotenv: ^6.0.0
+  shared_preferences: ^2.5.4
+  socket_io_client: ^3.1.3
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
